--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: BEWI
-logo: /assets/img/logo.png
+logo: /assets/logo.png
 description: The project page for the Bong Electronic Wind Instrument created by Parker Ryan 
 show_downloads: true
 theme: jekyll-theme-minimal
